[tool.poetry]
name = "py-quartz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "conduit" }]

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.18.4"
quart-schema = "^0.15.0"
hypercorn = "^0.14.3"
quart-db = "^0.4.1"
alembic = "^1.10.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
