[tool.poetry]
name = "py-quartz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "conduit" }]

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.18.4"
quart-schema = "^0.15.0"
hypercorn = "^0.14.3"
quart-db = "^0.4.1"
alembic = "^1.10.3"
psycopg = "^3.1.8"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
psycopg2-binary = "^2.9.6"
pytest-alembic = "^0.10.1"
pyright = "^1.1.302"
flake8 = "^6.0.0"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
sqlalchemy-utils = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
